@@ -1,6 +1,8 @@
 X X
     * Add Pickaxe + Looting = deconstruct (reverse crafting)
+    * Add Hoe + Power = move time
     * Improve Pickaxe/Shovel/Axe + Flame = auto-smelt to drop natural item if unsmeltable
+    * Improve Axe + Power = fell tree, now breaks more branches depending on enchantment level
     * Fix not ignoring cancelled events (partial fix for ticket 4)
     * Fix NPE and player disconnect with certain enchantments when using ModLoaderMP (ticket 6)
     * Fix Axe + Power = fell tree, causing a crash in some situations (ticket 3)
